--- a/report/report.tex
+++ b/report/report.tex
@@ -167,8 +167,8 @@ In addition, we are not limited to only spherical rigid bodies. We have tested a
 \section{Contribution}
 In this project, both of our teammates earnestly studied the physics and mathematics knowledge related to rigid bodies, and actively participated in the discussion of code architecture and code writing. Our main responsibilities for each other are listed below:
 \begin{itemize}
-	\item Ye HengWei: Impulse Method(In Unity & C++), Ball & Wall Collision, AABB, Bug Fix
-	\item Shao KuiXiang: Scene Generation, Model Import, Ball & Ball Collision, Code Refactoring
+	\item Ye HengWei: Impulse Method(In Unity \& C++), Ball \& Wall Collision, AABB, Bug Fix
+	\item Shao KuiXiang: Scene Generation, Model Import, Ball \& Ball Collision, Code Refactoring
 \end{itemize}
 % pictures should be in
 \end{document}
